PHASE 3.4: Add Java 5 Generics and fix deprecations
- Introduce type-safe Generics to eliminate raw type warnings
  * Backend.java: Replace new Long() with Long.valueOf()
  * BaseMogileFSImpl.java: ObjectPool<Backend>, List<InetSocketAddress>
  * SimpleMogileFSImpl.java: Implement ObjectPool<Backend>
  * PooledMogileFSImpl.java: GenericObjectPool<Backend>
  * PoolableBackendFactory.java: PoolableObjectFactory<Backend>
  * MogileOutputStream.java: ObjectPool<Backend>

- Fix deprecated URL(String) constructor
  * Replace with java.net.URI.create(path).toURL()
  * Applied to: BaseMogileFSImpl, MogileOutputStream, TestPut

- Fix test files
  * TestBackend.java: Add List<InetSocketAddress> generics
  * TestPut.java: Fix URL deprecation

Result: Eliminated 12 compiler warnings (only options warnings remain)